Fixed a bug with dark mode styling for mm-listitem

--- a/assets/styles/style/_dark.css
+++ b/assets/styles/style/_dark.css
@@ -14,8 +14,8 @@
   --link-color-rgb: var(--secondary-rgb);
   --link-hover-color: var(--secondary-light);
   --link-hover-color-rgb: var(--secondary-light-rgb);
+}
 
-  .mm-listitem {
-    --mm-listitem-bg-hover: var(--dark);
-  }
+[data-bs-theme="dark"] .mm-listitem {
+  --mm-listitem-bg-hover: var(--dark);
 }
